--- a/WebMart/CSS/estilos.css
+++ b/WebMart/CSS/estilos.css
@@ -1164,9 +1164,9 @@ footer table td:first-child{
     font-size: 14px;
 }
 
-.mPublic .sPublic2 textarea::-webkit-scrollbar, .pUp>div>section:last-child::-webkit-scrollbar {height: 8px; width: 10px}
-.mPublic .sPublic2 textarea::-webkit-scrollbar-thumb, .pUp>div>section:last-child::-webkit-scrollbar-thumb {background-color: lightgrey; border-radius: 5px;}
-.mPublic .sPublic2 textarea::-webkit-scrollbar-thumb:hover, .pUp>div>section:last-child::-webkit-scrollbar-thumb:hover {background-color: rgb(180, 180, 180);}
+.mPublic .sPublic2 textarea::-webkit-scrollbar, .pUp>div>section:last-child::-webkit-scrollbar, #a2 textarea::-webkit-scrollbar {height: 8px; width: 10px}
+.mPublic .sPublic2 textarea::-webkit-scrollbar-thumb, .pUp>div>section:last-child::-webkit-scrollbar-thumb, #a2 textarea::-webkit-scrollbar-thumb {background-color: lightgrey; border-radius: 5px;}
+.mPublic .sPublic2 textarea::-webkit-scrollbar-thumb:hover, .pUp>div>section:last-child::-webkit-scrollbar-thumb:hover, #a2 textarea::-webkit-scrollbar-thumb:hover {background-color: rgb(180, 180, 180);}
 
 .mPublic .sPublic2 #precio::-webkit-inner-spin-button, .mPublic .sPublic2 #precio::-webkit-outer-spin-button{
     -webkit-appearance: none;
@@ -1457,13 +1457,23 @@ footer table td:first-child{
     column-gap: 15px;
 }
 
+#a2 .sAPerfil2 #error{
+    padding: 0 20px 20px;
+    color: red;
+    text-align: center;
+}
+
+#a2 .sAPerfil2 .colorRed{
+    border: 1px solid red;
+}
+
 #a2 .sAPerfil2>section input{
     border-radius: 5px;
     width: calc(100% - 10px);
     outline: none;
     border: 1px solid lightgrey;
     height: 40px;
-    font-size: 18px;
+    font-size: 16px;
     padding: 5px;
 }
 
@@ -1471,20 +1481,253 @@ footer table td:first-child{
     border: 1px solid #00adec;
 }
 
+#a2 .sAPerfil2>div{
+    padding-bottom: 20px;
+    margin: 0 20px;
+}
+
+#a2 .sAPerfil2>div>section{
+    display: flex;
+    width: 100%;
+}
+
+#a2 .sAPerfil2 div span{
+    margin-left: auto;
+}
+
+#a2 .sAPerfil2>div div{
+    margin:5px;
+    border-radius: 5px;
+    border: 1px solid lightgrey;
+    width: calc(100% - 10px);
+}
+
+#a2 .sAPerfil2>div div>textarea{
+    resize: none;
+    width: calc(100% - 20px);
+    outline: none;
+    border: none;
+    padding: 7px;
+    font-size: 16px;
+}
+
+#a2 .sAPerfil2>div div:focus-within{
+    border: 1px solid #00adec;
+}
 
 
+#a2 .sAPerfil3{
+    text-align: center;
+    padding-bottom: 20px;
+    margin-top: 15px !important;
+    margin-bottom: 15px !important;
+}
 
+#a2 .sAPerfil3 h3{
+    text-align: center;
+    padding: 10px 0;
+}
 
+#a2 .sAPerfil3 section{
+    margin: auto;
+    display: grid;
+    width: 1000px;
+    max-width: 95%;
+    padding: 20px;
+    gap: 10px;
+    grid-template-columns: repeat(5, 1fr);
+}
 
+#a2 .sAPerfil3 section input{
+    grid-column: 4 span;
+    padding: 5px;
+    height: 30px;
+    font-size: 14px;
+    outline: none;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+}
+
+#a2 .sAPerfil3 #guardar{
+    color: white;
+    border: none;
+    border-radius: 20px;
+    background: #00adec;
+    margin-top: 20px;
+    height: 40px;
+    width: 200px;
+    max-width: 95%;
+    cursor: pointer;
+}
+
+#a2 .sAPerfil3 section input:focus-within{
+    border: 1px solid #00adec;
+}
+
+#a2 .sAPerfil3 section button{
+    cursor: pointer;
+    border: none;
+    background-color: #00adec;
+    color: white;
+    border-radius: 20px;
+}
 
 #a2 #map{
     margin: auto;
     position: relative;
     width: 1000px;
     height: 400px;
-    max-width: 100%;
+    max-width: 95%;
+    border-radius: 10px;
+    border: 1px solid lightgrey;
 }
 
+/* Pagina de productos */
+
+#sMainProd>section{
+    border-radius: 10px;
+    margin: auto;
+    width: 1200px;
+    max-width: 95%;
+}
+
+#sMainProd .s1Prod{
+    text-align: center;
+    padding: 20px 0;
+    background: none;
+}
+
+#sMainProd .s2Prod{
+    background: none;
+}
+
+#sMainProd .s2Prod ul{
+    list-style: none;
+}
+
+#sMainProd .s2Prod ul li{
+    margin: 0 5px;
+    padding: 5px;
+    cursor: pointer;
+    display: inline-block;
+}
+
+#sMainProd .s2Prod li.active{
+    border-bottom: 2px solid #00adec;
+    color: #00adec;
+}
+
+#sMainProd .s3Prod{
+    margin-top: 10px;
+}
+
+#sMainProd .s3Prod>section{
+    display: none;
+}
+
+#sMainProd .s3Prod>section.active{
+    display: block;
+}
+
+.noResult{
+    border-radius: 10px;
+    background: white;
+    padding: 10px 0 0 0;
+    width: 100%;
+    text-align: center;
+}
+
+.noResult p>a{
+    color: black;
+}
+
+.noResult img{
+    max-width: 100%;
+    width: 500px;
+}
+
+.products{
+    padding: 20px 0;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+ .products a{
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
+    color: black;
+}
+
+ .products a:hover{
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+ .products a>div{
+    border-radius: 10px 10px 0 0;
+    width: 100%;
+    height: 200px;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+}
+
+ .products a>section{
+    border-radius: 0 0 10px 10px;
+    padding: 10px;
+}
+
+.products a>section>div{
+    margin: 5px 0;
+    display: flex;
+}
+
+ .products a>section>div p:first-of-type{
+    font-weight: bold;
+    font-size: 17px;
+}
+
+ .products a>section>div p.reserved{
+    margin-left: auto;
+    color: grey;
+    font-size: 14px;
+}
+
+ /* Pagina de Compras */
+
+.sMainCompras{
+    min-height: calc(100% - var(--altura-header) - var(--altura-footer));
+}
+
+.sMainCompras>section{
+    width: 1200px;
+    margin: auto;
+    max-width: 95%;
+}
+
+.sCompras1{
+    text-align: center;
+    padding: 10px 0;
+}
+
+/* Página de Favoritos */
+
+.sMainFav{
+    min-height: calc(100% - var(--altura-header) - var(--altura-footer));
+}
+
+.sMainFav>section{
+    width: 1200px;
+    margin: auto;
+    max-width: 95%;
+}
+
+.sFav1{
+    text-align: center;
+    padding: 10px 0;
+}
 
 /* MEDIA QUERY */
 
@@ -1528,7 +1771,7 @@ footer table td:first-child{
         grid-template-columns: 1fr !important;
     }
 
-    .sProd2>section{
+    .sProd2>section, .products{
         grid-template-columns: repeat(1, 1fr) !important;
     }
 }
@@ -1536,6 +1779,10 @@ footer table td:first-child{
 @media (max-width: 645px) {
     .sPublic3>section{
         grid-template-columns: 1fr 1fr;
+    }
+
+    .sAPerfil2>section{
+        grid-template-columns: 1fr !important;
     }
 }
 
@@ -1554,12 +1801,23 @@ footer table td:first-child{
         overflow: hidden;
     }
 
-    .sProd2>section{
+    .sProd2>section, .products{
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 915px){
+
+    .mPerfil #a1{
+        display: none;
+    }
+
+    .mPerfil #a2{
+        left: 0;
+        width: 100%;
     }
 
 }
-
 @media (max-width: 1260px) {
 
     :root{
