--- a/WebMart/CSS/estilos.css
+++ b/WebMart/CSS/estilos.css
@@ -1793,8 +1793,7 @@ form.formOpinar button{
 }
 
 .mPSelected>.gridFyP .profile .abajo{
-    position: absolute;
-    bottom: 0;
+    margin-top:10px;
     font-size: 14px;
 }
 
@@ -1858,6 +1857,66 @@ form.formOpinar button{
     display: flex;
 }
 
+.mPSelected>.gridFyP .profile .tipo{
+    padding: 8px 0;
+    font-weight: bolder;
+    font-size: 18px;
+}
+
+.mPSelected>.gridFyP .profile>button{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+    margin-top: 10px;
+    border-radius: 8px;
+    color: white;
+    background: #00adec;
+    font-size: 16px;
+    padding: 10px 3px;
+    outline: none;
+    border: none;
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.mPSelected>.gridFyP .profile>button:disabled{
+    background: lightgrey;
+    cursor: default;
+    color: black;
+}
+
+.mPSelected>.gridFyP .profile>button:hover{
+    background: #0f9dcc;
+}
+
+.mPSelected>.gridFyP .profile>button:disabled:hover{
+    background: lightgrey;
+    cursor: default;
+    color: black;
+}
+
+.mPSelected>.gridFyP .profile>button div{
+    display: flex;
+}
+
+.mPSelected>.gridFyP .profile>button div p{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.mPSelected>.gridFyP .profile .reservados{
+    border-radius: 5px;
+    padding: 10px 2px;
+    display: grid;
+    place-items: center;
+    background: rgba(211, 211, 211, 0.5);
+    color: black;
+}
+
+
+
 
 
 
@@ -1873,6 +1932,7 @@ form.formOpinar button{
 }
 
 .mPSelected>.gridFyP .image img{
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1883,11 +1943,9 @@ form.formOpinar button{
     max-height: 100%;
 }
 
-
-
-
-
-
+.mPSelected>.gridFyP .image img.showed{
+    display: block;
+}
 
 
 .mPSelected>.gridFyP .image div{
@@ -1899,7 +1957,7 @@ form.formOpinar button{
 
 .mPSelected>.gridFyP .image div:hover{
     cursor: pointer;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .mPSelected>.gridFyP .image #left{
@@ -1917,6 +1975,47 @@ form.formOpinar button{
 .mPSelected>.gridFyP .image div span{
     margin: 5px;
 }
+
+
+.mPSelected form{
+    width: 1200px;
+    margin: 15px auto;
+    max-width: 95%;
+}
+
+
+
+
+
+
+
+
+.mPSelected .tituloyFav{
+    display: flex;
+    margin: auto;
+    padding-top: 20px;
+
+}
+
+.mPSelected .tituloyFav span{
+    margin-left: auto;
+    font-size: 25px;
+    color: lightgrey;
+    cursor: pointer;
+}
+
+.mPSelected .tituloyFav span.fav{
+    color: #00adec;
+}
+
+.mPSelected .descripcion{
+    padding-top: 15px;
+    margin-bottom: 10px;
+}
+
+
+
+
 
 
 
@@ -2528,6 +2627,27 @@ form.formOpinar button{
         margin-top: 10px;
         padding-top: 5px;
         border-top: 1px solid lightgrey;
+    }
+
+}
+
+@media  (max-width: 800px){
+
+    .mPSelected>.gridFyP{
+        grid-template-columns: 1fr;
+    }
+
+    .mPSelected>.gridFyP .profile,  .mPSelected>.gridFyP .image{
+        grid-column: span 1;
+    }
+
+    .mPSelected>.gridFyP .profile a:first-child{
+        padding-left: 0;
+    }
+
+    .mPSelected>.gridFyP .profile a:first-child img{
+        margin-left: 0px;
+
     }
 
 }
