--- a/WebMart/CSS/estilos.css
+++ b/WebMart/CSS/estilos.css
@@ -2664,9 +2664,9 @@ form.formOpinar button{
     overflow: auto;
 }
 
-.sReservas .select ul::-webkit-scrollbar, #opinionesRec>div section:last-child::-webkit-scrollbar {height: 6px; width: 6px}
-.sReservas .select ul::-webkit-scrollbar-thumb, #opinionesRec>div section:last-child::-webkit-scrollbar-thumb {background-color: grey; border-radius: 3px;}
-.sReservas .select ul::-webkit-scrollbar-thumb:hover, #opinionesRec>div section:last-child::-webkit-scrollbar-thumb:hover {background-color: rgb(180, 180, 180);}
+.sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child::-webkit-scrollbar, .sReservas .select ul::-webkit-scrollbar, #opinionesRec>div section:last-child::-webkit-scrollbar {height: 6px; width: 6px}
+.sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child::-webkit-scrollbar-thumb, .sReservas .select ul::-webkit-scrollbar-thumb, #opinionesRec>div section:last-child::-webkit-scrollbar-thumb {background-color: grey; border-radius: 3px;}
+.sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child::-webkit-scrollbar-thumb:hover, .sReservas .select ul::-webkit-scrollbar-thumb:hover, #opinionesRec>div section:last-child::-webkit-scrollbar-thumb:hover {background-color: rgb(180, 180, 180);}
 
 /* Reservas */
 
@@ -2759,7 +2759,7 @@ form.formOpinar button{
     position: relative;
     width: 150px;
     height: 150px;
-    background: lightgrey;
+    overflow: hidden;
 }
 
 .sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:first-child img{
@@ -2775,8 +2775,34 @@ form.formOpinar button{
 
 .sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child{
     height: 150px;
+    overflow: auto;
+    width: 100%;
 }
 
+.sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child div{
+    padding: 5px;
+    margin: 3px 0;
+    width: calc(100% - 10px);
+    display: flex;
+}
+
+.sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child div:hover{
+    background: rgba(211, 211, 211, 0.2);
+}
+
+.sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child div p{
+    font-weight: bolder;
+}
+
+.sReservas .menus .solicitudes .pSolicitudes>div>.s2 article:last-child div button{
+    background: lightgreen;
+    outline: none;
+    border: none;
+    margin-left: 10px;
+    padding: 2px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 
 
@@ -2854,7 +2880,7 @@ form.formOpinar button{
     }
 
     .mPSelected>.gridFyP .profile a:first-child img{
-        margin-left: 0px;
+        margin-left: 0;
 
     }
 
@@ -2863,7 +2889,7 @@ form.formOpinar button{
 
 @media (max-width: 715px) {
 
-    .sIndex2 form, .sIndex4 form, .sIndex5 form, .sProd1 form, .mPublic .sPublic2 .pesaje section, .mUser>form>section, .mEstadisticas .info{
+    .sIndex2 form, .sIndex4 form, .sIndex5 form, .sProd1 form, .mPublic .sPublic2 .pesaje section, .mUser>form>section, .mEstadisticas .info, .sReservas .menus .solicitudes .pSolicitudes{
         grid-template-columns: 1fr !important;
     }
 
